kubernetes/ckad/webapp/webapp-color/webapp-color-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webapp
  name: webapp-color
  labels:
    app: webapp-color
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
    spec:
      containers:
      - image: registry.fritz.box/my/arm64v8/simple-webapp-color
        name: webapp-color
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
