kubernetes/ckad/webapp/webapp-color/webapp-color-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: webapp-color-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: webapp-color
  type: ClusterIP
